# Logan

./: .dockerignore  .gitignore  Dockerfile  FRAMEWORK_VALIDATION_REPORT.md  PAPER_UPDATES_SUMMARY.md  README.md  README_experiments.md  REAL_GAN_TRAINING_REPORT.md  UPDATED_COMPLETION_SUMMARY.md  logan_release_audit.py  pyproject.toml  release_audit_report.md
.github/workflows/: ci.yml
docs/: final_repository_overview.md  logical_gans_repo.md
docs/misc_root/: Dockerfile
experiments/: exp1_mso_satisfaction.py  exp2_ef_distance_proto.py  exp3_framework_validation.py  exp3_training_validation.py  exp4_real_gan_training.py
paper/: main.tex  paper_sections_logical_gans.tex
results/: exp1_bipartite.csv  exp1_planarity.csv  exp1_tree.csv  exp2_bipartite.csv  exp3_bipartite_validation.csv  exp3_connectivity_validation.csv  exp3_tree_validation.csv  exp4_bipartite_gan.csv  exp4_connectivity_gan.csv  exp4_tree_gan.csv
src/logical_gans/: __init__.py  logical_loss.py  repro.py
src/logical_gans/core/: applications_module.py  experimental_framework.py  jupyter_notebooks.py  test_suite_documentation.py  training_scripts.py
src/logical_gans/logic/: ef_games.py  ef_games_implementation.py  logical_gan_framework.py  mso.py  mso_compiler.py  test_ef_mso.py
src/logical_gans/utils/: cli.py  utility_modules.py
tests/: test_sanity.py
